objects/SetupPageSearchMetadata__dlm.object
<CustomObject>
    <fields>
        <fullName>AiDescription__c</fullName>
        <label>AI Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApiName__c</fullName>
        <label>Api Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HierarchicalPath__c</fullName>
        <label>Hierarchical Path</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Setup Page Search Metadata Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalOrganization__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_Id__c</fullName>
        <label>Key Qualifier Setup Page Search Metadata</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageType__c</fullName>
        <label>Page Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageUrl__c</fullName>
        <label>Page URL</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>